// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FriendCard component should render correcly with given data when is last friends 1`] = `
<Link
  to="/profile/Ovardov"
>
  <section
    className="container"
  >
    <div
      className="image-container"
    >
      <span
        className="container"
        onClick={[Function]}
      >
        <Link
          to="/profile/undefined"
        >
          <img
            alt="Aleksandar Ovardov"
            className="avatar-image"
            src="https://res.cloudinary.com/dxxq5xtsy/image/upload/v1576368427/cxfz26hn4gxeg36cv56q.jpg"
          />
        </Link>
      </span>
    </div>
  </section>
</Link>
`;

exports[`FriendCard component should render correcly with given data when is not in last friends 1`] = `
<Link
  to="/profile/Ovardov"
>
  <section
    className="container"
  >
    <div
      className="image-container"
    >
      <span
        className="container"
        onClick={[Function]}
      >
        <Link
          to="/profile/undefined"
        >
          <img
            alt="Aleksandar Ovardov"
            className="avatar-image"
            src="https://res.cloudinary.com/dxxq5xtsy/image/upload/v1576368427/cxfz26hn4gxeg36cv56q.jpg"
          />
        </Link>
      </span>
      <div
        className="message-container"
      >
        <i
          className="fas fa-user-circle message-icon"
        />
      </div>
    </div>
    <h5>
      Aleksandar Ovardov
    </h5>
    <p>
      Lives in 
      Plovdiv
    </p>
  </section>
</Link>
`;

exports[`FriendCard component should render correcly with given data without home 1`] = `
<Link
  to="/profile/Ovardov"
>
  <section
    className="container"
  >
    <div
      className="image-container"
    >
      <span
        className="container"
        onClick={[Function]}
      >
        <Link
          to="/profile/undefined"
        >
          <img
            alt="Aleksandar Ovardov"
            className="avatar-image"
            src="https://res.cloudinary.com/dxxq5xtsy/image/upload/v1576368427/cxfz26hn4gxeg36cv56q.jpg"
          />
        </Link>
      </span>
      <div
        className="message-container"
      >
        <i
          className="fas fa-user-circle message-icon"
        />
      </div>
    </div>
    <h5>
      Aleksandar Ovardov
    </h5>
  </section>
</Link>
`;
